# bazel-svelte-rollup-bug

./: .gitignore  App.svelte  BUILD.bazel  README.md  WORKSPACE  main.js  package.json  rollup.config.js
